# t5

./: run.sh
rust_c2rust/100_doors/src/: main.rs
rust_c2rust/100_prisoners/src/: main.rs
rust_c2rust/15_puzzle_game/src/: main.rs
rust_c2rust/2048/src/: main.rs
rust_c2rust/21_game/src/: main.rs
rust_c2rust/24_game/src/: main.rs
rust_c2rust/4_rings_puzzle/src/: main.rs
rust_c2rust/99_bottles_of_beer/src/: main.rs
rust_c2rust/9_billion_names_of_God_the_integer/src/: main.rs
rust_c2rust/ABC_problem/src/: main.rs
rust_c2rust/AKS_test_for_primes/src/: main.rs
rust_c2rust/A_plus_B/src/: main.rs
rust_c2rust/abbreviations_automatic/src/: main.rs
rust_c2rust/abbreviations_easy/src/: main.rs
rust_c2rust/abbreviations_simple/src/: main.rs
rust_c2rust/abelian_sandpile_model/src/: main.rs
rust_c2rust/abundant_odd_numbers/src/: main.rs
rust_c2rust/assertions/: lib.rs
rust_c2rust/currying/: lib.rs
rust_c2rust/integer_roots/: lib.rs
rust_c2rust/optional_parameters/: lib.rs
rust_c2rust/ordered_words/: lib.rs
rust_c2rust/prime_decomposition/: lib.rs
rust_c2rust/regular_expression/: Cargo.toml  lib.rs
rust_crusts/csv_data_manipulation/: lib.rs
rust_crusts/currying/: lib.rs
rust_crusts/find_the_intersection_of_two_lines/: lib.rs
rust_crusts/integer_roots/: Cargo.toml  lib.rs
rust_crusts/optional_parameters/: lib.rs
rust_crusts/partition_an_integer_x_into_n_primes/: lib.rs
rust_crusts/regular_expression/: lib.rs
rust_crusts/sequence_of_non_squares/: lib.rs
t5/: Cargo.toml
t5/src/: c.scm  main.rs  rust.scm
(+616 files in other folders)
